@@ -20,8 +20,7 @@
 #define DECL_EXPORT extern "C" __attribute__ ((__visibility__("default")))
 extern "C"
 {
-    DECL_EXPORT bool lock(const char * binaryName)
+    DECL_EXPORT void create()
     {
-        return true;
     }
 }
