@@ -20,8 +20,16 @@
 #define DECL_EXPORT extern "C" __attribute__ ((__visibility__("default")))
 extern "C"
 {
-    DECL_EXPORT bool lock(const char * binaryName)
+    DECL_EXPORT void create()
     {
-        return true;
     }
+
+    DECL_EXPORT void type()
+    {
+    }
+
+    DECL_EXPORT void socketName()
+    {
+    }
+
 }
